--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 :root {
-  --background: #f0ebe3;
-  --background-2: #e4dccf;
-  --wall-node: black;
-  --starting-node: red;
-  --target-node: blue;
-  --path-color: yellowgreen;
+  --background: #fbf1c7;
+  --background-2: #ebdbb2;
+  --wall-node: #3c3836;
+  --starting-node: #cc241d;
+  --target-node: #458588;
+  --path-color: #d79921;
 }
 
 body {
@@ -12,6 +12,7 @@ body {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  background-color: var(--backgrounds);
 }
 
 .nav-divider {
